--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  color: black;
+  color: white;
   position: relative;
   background-color: black;
 }
@@ -11,14 +11,23 @@ body {
   width: 100vw;
   height: 100vh;
   display: grid;
-  grid-template-columns: repeat(1fr 3);
+  grid-template-columns: repeat(3 1fr);
+  grid-template-rows: repeat(3 1fr);
 }
-aside {
+.aside {
   position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
   width: 289px;
   height: 100%;
   background-color: rgb(5, 1, 1);
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 4;
 
+  
   & .home_search {
     width: 91%;
     height: 100px;
@@ -62,11 +71,15 @@ aside {
   margin-top: 10px;
   overflow: scroll;
   border-radius: 15px;
+  position: relative;
 
   &::-webkit-scrollbar {
     display: none;
   }
 
+  & #hide_plus{
+    display: none;
+  }
   & .img_text {
     padding: 10px;
     display: flex;
@@ -156,10 +169,14 @@ article {
   background-color: black;
   /* position: absolute; */
   top: 0rem;
-  margin-left: 310px;
+  margin-left: 292px;
   /* display: flex;
     flex-wrap: wrap; */
   /* align-content: center; */
+  grid-column-start: 2;
+  grid-column-start: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
 
   & .arrow_button {
     height: 34px;
@@ -169,7 +186,7 @@ article {
     top: 1px;
     z-index: 1;
     background-color: #242424;
-}
+  }
   & .left_right_arrow {
     padding: 10px;
     gap: 20px;
@@ -242,7 +259,6 @@ article {
     background-color: #242424;
     z-index: 2;
 
-
     & .all {
       border: none;
       border-radius: 10px;
@@ -269,10 +285,9 @@ article {
     /* justify-content: space-between; */
     flex-wrap: wrap;
     color: white;
-    & p{
+    & p {
       margin-left: 48rem;
     }
-    
   }
   & .card_parent {
     position: relative;
@@ -283,211 +298,202 @@ article {
     gap: 10px;
     flex-wrap: wrap;
 
-    & .card1{
-      & img{
+    & .card1 {
+      & img {
         width: 200px;
         height: 200px;
       }
-      & #s{
-         position:absolute;
-         top: 10rem;
-         left: 1rem;
-        }
-      & #sung{
-        line-height: 25px;
-          width: 90%;
-        }
-      
-    }
-    
-  
-    & .card2{
-      & img{
-        width: 200px;
-        height: 200px;
+      & #s {
+        position: absolute;
+        top: 10rem;
+        left: 1rem;
       }
-      & #s{
-         position:absolute;
-         top: 10rem;
-         left: 1rem;
-        }
-      & #sung{
+      & #sung {
         line-height: 25px;
-          width: 90%;
-        }
-      
-    }
-    & .card3{
-      & img{
-        width: 200px;
-        height: 200px;
+        width: 90%;
       }
-      & #s{
-         position:absolute;
-         top: 10rem;
-         left: 1rem;
-        }
-      & #sung{
-        line-height: 25px;
-          width: 90%;
-        }
-      
-    }
-    & .card4{
-      & img{
-        width: 200px;
-        height: 200px;
-      }
-      & #s{
-         position:absolute;
-         top: 10rem;
-         left: 1rem;
-        }
-      & #sung{
-        line-height: 25px;
-          width: 90%;
-        }
-      
     }
 
+    & .card2 {
+      & img {
+        width: 200px;
+        height: 200px;
+      }
+      & #s {
+        position: absolute;
+        top: 10rem;
+        left: 1rem;
+      }
+      & #sung {
+        line-height: 25px;
+        width: 90%;
+      }
     }
-   & .second{
-    margin-top: 30px;
+    & .card3 {
+      & img {
+        width: 200px;
+        height: 200px;
+      }
+      & #s {
+        position: absolute;
+        top: 10rem;
+        left: 1rem;
+      }
+      & #sung {
+        line-height: 25px;
+        width: 90%;
+      }
     }
-   & .third{
-    margin-top: 30px;
+    & .card4 {
+      & img {
+        width: 200px;
+        height: 200px;
+      }
+      & #s {
+        position: absolute;
+        top: 10rem;
+        left: 1rem;
+      }
+      & #sung {
+        line-height: 25px;
+        width: 90%;
+      }
     }
-   
-
-   
   }
-
-  .player {
-    width: 100%;
-    height: 80px;
-    background-color: #242424;
-    margin-top: 26rem;
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    /* right: 0px; */
-    
-    & .first{
-      display: flex;
-      color: white;
-
-      & .song_detail{
-        margin-top: 32px;
-
-        & .Arjit{
-          opacity: .5;
-        }
-        
-      }
-      .plus{
-        /* margin-left: 10rem; */
-        margin-top: 3rem;
-      }
-    }
-    & .second_item{
-      display: flex;
-      flex-wrap: wrap;
-      margin-top: -3rem;
-      margin-left: 25rem;
-      gap: 20px;
-      & img{
-        width: 15px;
-        height: 15px;
-      }
-      & #pause {
-        width: 30px;
-        height: 30px;
-        margin-top: -7px;
-        opacity: .5;
-    }
-    & #pause:hover{
-      opacity: 1;
-    }
-    & #icon1{
-      opacity: .5;
-    }
-    & #icon1:hover{
-      opacity: 1;
-    }
-    & #icon2{
-      opacity: .5;
-    }
-    & #icon2:hover{
-      opacity: 1;
-    }
-    & #icon4{
-      opacity: .5;
-    }
-    & #icon4:hover{
-      opacity: 1;
-    }
-    & #icon5{
-      opacity: .5;
-    }
-    & #icon5:hover{
-      opacity: 1;
-    }
-    }
-    &  .third {
-      width: 308px;
-      margin-left: 21rem;
-      margin-top: 1rem;
-      border-bottom: 5px solid #aba8a8;
+  & .second {
+    margin-top: 30px;
   }
-  &  .fourth {
-      width: 218px;
-      margin-left: 58rem;
-      margin-top: -3rem;
-      display: flex;
-      gap: 42px;
-  
-    & img{
+  & .third {
+    margin-top: 30px;
+  }
+}
+
+.player {
+  width: 100%;
+  height: 80px;
+  background-color: #242424;
+  margin-top: 26rem;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  grid-column-start: 1;
+  grid-column-start: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  /* right: 0px; */
+
+  & .first {
+    display: flex;
+    color: white;
+
+    & .song_detail {
+      margin-top: 32px;
+
+      & .Arjit {
+        opacity: 0.5;
+      }
+    }
+    .plus {
+      /* margin-left: 10rem; */
+      margin-top: 3rem;
+    }
+  }
+  & .second_item {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -3rem;
+    margin-left: 25rem;
+    gap: 20px;
+    & img {
+      width: 15px;
+      height: 15px;
+    }
+    & #pause {
+      width: 30px;
+      height: 30px;
+      margin-top: -7px;
+      opacity: 0.5;
+    }
+    & #pause:hover {
+      opacity: 1;
+    }
+    & #icon1 {
+      opacity: 0.5;
+    }
+    & #icon1:hover {
+      opacity: 1;
+    }
+    & #icon2 {
+      opacity: 0.5;
+    }
+    & #icon2:hover {
+      opacity: 1;
+    }
+    & #icon4 {
+      opacity: 0.5;
+    }
+    & #icon4:hover {
+      opacity: 1;
+    }
+    & #icon5 {
+      opacity: 0.5;
+    }
+    & #icon5:hover {
+      opacity: 1;
+    }
+  }
+  & .third {
+    width: 308px;
+    margin-left: 21rem;
+    margin-top: 1rem;
+    border-bottom: 5px solid #aba8a8;
+  }
+  & .fourth {
+    width: 218px;
+    margin-left: 58rem;
+    margin-top: -3rem;
+    display: flex;
+    gap: 42px;
+
+    & img {
       width: 30px;
       height: 30px;
     }
-    & #pause{
-      opacity: .5;
+    & #pause {
+      opacity: 0.5;
       width: 20px;
       height: 20px;
       margin-top: 3px;
     }
-    & #pause:hover{
+    & #pause:hover {
       opacity: 1;
     }
-    & #icon1{
-      opacity: .5;
+    & #icon1 {
+      opacity: 0.5;
     }
-    & #icon1:hover{
+    & #icon1:hover {
       opacity: 1;
     }
-    & #icon2{
-      opacity: .5;
+    & #icon2 {
+      opacity: 0.5;
     }
-    & #icon2:hover{
+    & #icon2:hover {
       opacity: 1;
     }
-    & #icon4{
-      opacity: .5;
+    & #icon4 {
+      opacity: 0.5;
       width: 20px;
       height: 20px;
       margin-top: 3px;
     }
-    & #icon4:hover{
+    & #icon4:hover {
       opacity: 1;
     }
-    & #icon5{
-      opacity: .5;
+    & #icon5 {
+      opacity: 0.5;
     }
-    & #icon5:hover{
+    & #icon5:hover {
       opacity: 1;
     }
+  }
 }
-}
-
-
-
